--- a/4.3 HTML Porfolio Project/index.html
+++ b/4.3 HTML Porfolio Project/index.html
@@ -12,9 +12,9 @@
     <h2>I'm a Web Developer</h2>
     <hr />
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/movie-ranking.png" height="200" alt="Movie Ranking">
+    <img src="./goal copy.png" height="200" alt="Movie Ranking">
     <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-   <img src="./assets/images/birthday-invite.png" height="200" alt="Birthday Invite">
+   <img src="./goal.png" height="200" alt="Birthday Invite">
    <hr />
    <a href="./public/about.html">About Me</a>
    <a href="./public/contact.html">Conatct Me</a>
